Fri May 30 12:29:37 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/OEP/BasicSP/BasicSP.dsw:
        * examples/OEP/BasicSP/BasicSP.idl:
        * examples/OEP/BasicSP/BasicSP.mpc:
        * examples/OEP/BasicSP/BasicSP_stub.dsp:
        * examples/OEP/BasicSP/BasicSP_stub_export.h:
        * examples/OEP/BasicSP/BasicSP_svnt.dsp:
        * examples/OEP/BasicSP/BasicSP_svnt_export.h:
        * examples/OEP/BasicSP/NOTE.txt:
        * examples/OEP/BasicSP/README:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED.cidl:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED.idl:
        * examples/OEP/BasicSP/BMClosedED/BMClosedEDEI.idl:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.cpp:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.dsp:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.h:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_exec_export.h:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_stub.dsp:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_stub_export.h:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_svnt.dsp:
        * examples/OEP/BasicSP/BMClosedED/BMClosedED_svnt_export.h:
        * examples/OEP/BasicSP/BMClosedED/config:
        * examples/OEP/BasicSP/BMDevice/BMDevice.cidl:
        * examples/OEP/BasicSP/BMDevice/BMDevice.idl:
        * examples/OEP/BasicSP/BMDevice/BMDeviceEI.idl:
        * examples/OEP/BasicSP/BMDevice/BMDevice_exec.cpp:
        * examples/OEP/BasicSP/BMDevice/BMDevice_exec.dsp:
        * examples/OEP/BasicSP/BMDevice/BMDevice_exec.h:
        * examples/OEP/BasicSP/BMDevice/BMDevice_exec_export.h:
        * examples/OEP/BasicSP/BMDevice/BMDevice_stub.dsp:
        * examples/OEP/BasicSP/BMDevice/BMDevice_stub_export.h:
        * examples/OEP/BasicSP/BMDevice/BMDevice_svnt.dsp:
        * examples/OEP/BasicSP/BMDevice/BMDevice_svnt_export.h:
        * examples/OEP/BasicSP/BMDevice/config:
        * examples/OEP/BasicSP/BMDisplay/BMDisplay.cidl: