@@ -1,3 +1,8 @@
+Fri May 30 13:57:26 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* Makefile: A new top level Makefile which will have the needed
+	  information for the release.
+
 Fri May 30 12:29:37 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * examples/OEP/BasicSP/BasicSP.dsw:
